Update CreateAddon to support Mechanical Crafter